# MSPL

./: .gitignore  README.md
week1/: CMakeLists.txt  Makefile  README.md  binary  binary.cpp  histogram  histogram.cpp  morphology  morphology.cpp  plotHis  plotHis.cpp
week1/doc/: week1_柏昇.docx
week1/test/hello/: Makefile
week1/test/opencv/: CMakeCache.txt  DisplayImage  Makefile  cmake_install.cmake
week2/: CMakeLists.txt  README.md  canny.cpp  denoise.cpp  edgeDetect.cpp
week2/doc/: week2_柏昇.docx
week3/: README.md  main.ipynb  main.py  requirements.txt
week3/doc/: week3_柏昇.docx
week4/: README.md
week5/: README.md
week6/: README.md
