cmake_minimum_required(VERSION 2.8)

project( binary )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( binary binary.cpp )
target_link_libraries( binary ${OpenCV_LIBS} )

project( histogram )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( histogram histogram.cpp )
target_link_libraries( histogram ${OpenCV_LIBS} )

project( plotHis )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( plotHis plotHis.cpp )
target_link_libraries( plotHis ${OpenCV_LIBS} )

project( morphology )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( morphology morphology.cpp )
target_link_libraries( morphology ${OpenCV_LIBS} )